@@ -1830,7 +1830,7 @@ namespace Chummer
                 Name = bonusNode["name"]?.InnerText ?? _strFriendlyName,
                 Category = LanguageManager.GetString("Tab_Critter", GlobalSettings.DefaultLanguage),
                 RangeType = "Melee",
-                Reach = Convert.ToInt32(bonusNode["reach"]?.InnerText ?? "0", GlobalSettings.InvariantCultureInfo),
+                Reach = bonusNode["reach"]?.InnerText ?? "0",
                 Accuracy = bonusNode["accuracy"]?.InnerText ?? "Physical",
                 Damage = bonusNode["damage"]?.InnerText ?? "({STR})S",
                 AP = bonusNode["ap"]?.InnerText ?? "0",
