@@ -90,6 +90,7 @@ Application Changes:
 - Added the ability for weapons to alter their own stats when wireless is turned on via a `wirelessweaponbonus` node that works identically to `weaponbonus` nodes in gear items. Added identical functionality to weapon accessories, though they will alter their parent's stats when wireless intead.
 - Weapon accessories can now modify their parent weapon's accuracy in a more dynamic way similar to how AP modifiers work.
 - Ammunition that alters that stats of a weapon into which it is loaded in a way that depends on its rating now properly uses the rating of the ammunition instead of the rating of the weapon into which it is loaded.
+- Weapon and weapon accessory reach entries can now work off of character attributes and/or ratings.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
